--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use-rest",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "React.js data hooks for REST endpoints",
   "main": "index.js",
   "target": "esnext",
@@ -9,7 +9,7 @@
     "test": "jest --verbose",
     "test:watch": "yarn test - --watch",
     "build": "babel src --ignore '**/*.spec.js' --out-dir build -d",
-    "release": "yarn build && release --src=build --push",
+    "release": "yarn build && release --src=build --push --tag",
     "release:major": "yarn release --major",
     "release:minor": "yarn release --minor",
     "release:patch": "yarn release --patch"
