--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     "@babel/plugin-transform-modules-commonjs",
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-transform-runtime"
   ]
 }
