--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use-rest",
-  "version": "0.6.11",
+  "version": "0.6.11-next.0",
   "description": "React.js data hooks for REST endpoints",
   "main": "index.js",
   "target": "esnext",
@@ -12,7 +12,8 @@
     "release": "yarn build && release --src=build --push --tag",
     "release:major": "yarn release --major",
     "release:minor": "yarn release --minor",
-    "release:patch": "yarn release --patch"
+    "release:patch": "yarn release --patch",
+    "release:next": "yarn build && release --src=build --push --type=next"
   },
   "keywords": [
     "react",
