--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,19 @@
 {
   "presets": [
-    "@babel/preset-env",
+    [
+      "@babel/preset-env", {
+        "targets": "> 0.25%, not dead"
+      }
+    ],
     "@babel/preset-react"
   ],
   "plugins": [
     "@babel/plugin-transform-modules-commonjs",
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-transform-runtime"
+    [
+      "@babel/plugin-transform-runtime", {
+        "only": "./test"
+      }
+    ]
   ]
 }
