--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "rm -rf build",
     "pretest": "yarn build",
     "test": "jest --verbose",
-    "test:watch": "yarn test - --watch",
+    "dev": "yarn test - --watch",
     "build": "babel src --ignore '**/*.spec.js' --out-dir build -d",
     "release": "yarn build && release --src=build --push --tag",
     "release:major": "yarn release --major",
@@ -43,13 +43,16 @@
     "@babel/preset-react": "^7.0.0",
     "@testing-library/react-hooks": "^2.0.1",
     "faker": "^4.1.0",
+    "fetch-mock": "^7.3.9",
     "husky": "^3.0.5",
     "jest": "^24.9.0",
+    "jest-fetch-mock": "^2.1.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0",
+    "whatwg-fetch": "^3.0.0",
     "yarn-release": "^1.10.2"
   },
   "peerDependencies": {
