--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0",
+    "supergeneric": "^1.1.0",
     "whatwg-fetch": "^3.0.0",
     "yarn-release": "^1.10.2"
   },
