--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@testing-library/react-hooks": "^2.0.1",
+    "chalk": "^2.4.2",
     "faker": "^4.1.0",
     "fetch-mock": "^7.3.9",
     "husky": "^3.0.5",
