--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "react-use-rest",
-  "version": "1.7.1",
+  "version": "1.7.1-next.0",
   "description": "React.js data hooks for REST endpoints",
   "main": "index.js",
   "target": "esnext",
   "scripts": {
-    "prebuild": "rm -rf build",
+    "prebuild": "rm -rf dist",
     "test": "jest --verbose",
     "dev": "yarn test - --watch",
-    "build": "babel src --ignore '**/*.spec.js' --out-dir build -d && yarn test",
-    "release": "yarn build && release --src=build --push --tag",
+    "build": "rollup -c rollup.config.js && yarn test",
+    "release": "yarn build && release --src=dist --push --tag",
     "release:major": "yarn release --major",
     "release:minor": "yarn release --minor",
     "release:patch": "yarn release --patch",
-    "release:next": "yarn build && release --src=build --push --type=next"
+    "release:next": "yarn build && release --src=dist --push --type=next"
   },
   "keywords": [
     "react",
@@ -33,13 +33,6 @@
     "email": "krwhitley@gmail.com"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.5.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
     "@testing-library/react-hooks": "^2.0.1",
     "chalk": "^2.4.2",
     "faker": "^4.1.0",
@@ -52,7 +45,13 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0",
+    "rollup": "^1.22.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
     "supergeneric": "^1.1.0",
+    "ts-jest": "^24.1.0",
+    "typescript": "^3.6.3",
     "whatwg-fetch": "^3.0.0",
     "yarn-release": "^1.10.2"
   },
