--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-use-rest",
-  "version": "1.7.3",
+  "version": "1.7.4",
   "description": "React.js data hooks for REST endpoints",
   "main": "index.js",
   "target": "esnext",
@@ -46,9 +46,10 @@
     "react-dom": "^16.9.0",
     "react-test-renderer": "^16.9.0",
     "rollup": "^1.22.0",
+    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
+    "rollup-plugin-typescript2": "^0.24.3",
     "supergeneric": "^1.1.0",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3",
