--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "module": "commonjs",
+    "module": "ES2015",
     "target": "es5",
     "jsx": "react",
     "esModuleInterop": true,
-    "outDir": "./build/"
+    "outDir": "./dist/"
   },
   "include": ["./src/**/*"]
 }
