--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-use-rest",
-  "version": "1.9.0",
+  "name": "data-hooks",
+  "version": "1.10.0",
   "description": "React.js data hooks for REST endpoints",
   "main": "index.js",
   "target": "esnext",
