--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-data-hooks",
-  "version": "1.12.7",
+  "version": "1.13.0",
   "description": "Elegant, powerful, full-CRUD API data fetching & control via React.js data hooks",
   "main": "index.js",
   "target": "esnext",
@@ -40,6 +40,7 @@
     "husky": "^3.0.8",
     "jest": "^24.9.0",
     "jest-fetch-mock": "^2.1.2",
+    "jest-localstorage-mock": "^2.4.0",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.10.1",
